# phoneappli-api-mcp-server-using-apimanagement

./: .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SETUP-MCP-SERVER.md  sample-description-for-mcp.md  v1.20.0.yaml
infra/: README.md  main.bicep  main.bicepparam.example  resources.bicep
script/: analyzer  bootstrap  check-descriptions  check-mcp-compatibility  cleanup  convert-to-english  deploy  fix-descriptions  reimport  test  validate
src/: __init__.py  analyze_descriptions.py  import_api.py  validate.py
tests/: conftest.py  test_import_api.py  test_validate.py
